--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
   <html>
     <head>
       <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" />
+      <script src="node_modules/jquery/dist/jquery.min.js"></script>
       <script src="node_modules/xterm/lib/xterm.js"></script>
+      <script src="index.js"></script>
     </head>
     <body>
       <div id="terminal"></div>
-      <script src="index.js"></script>
     </body>
   </html>
