--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" />
       <script src="node_modules/jquery/dist/jquery.min.js"></script>
       <script src="node_modules/xterm/lib/xterm.js"></script>
+      <script src='node_modules/js-yaml/dist/js-yaml.min.js'></script>
       <script src="index.js"></script>
     </head>
     <body>
