--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
   <html>
     <head>
-      <link rel="stylesheet" href="node_modules/xterm/css/xterm.css" />
-      <script src="node_modules/jquery/dist/jquery.min.js"></script>
-      <script src="node_modules/xterm/lib/xterm.js"></script>
-      <script src='node_modules/js-yaml/dist/js-yaml.min.js'></script>
+      <link rel="stylesheet" href="css/xterm.css" />
+      <script src="js/lib/jquery.min.js"></script>
+      <script src="js/lib/xterm.js"></script>
+      <script src="js/lib/js-yaml.min.js"></script>
       <script src="index.js"></script>
     </head>
     <body>
