--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
   <html>
     <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
       <link rel="stylesheet" href="css/xterm.css" />
+      <link rel="stylesheet" href="css/styles.css" />
       <script src="js/lib/jquery.min.js"></script>
       <script src="js/lib/xterm.js"></script>
       <script src="js/lib/js-yaml.min.js"></script>
