--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       <script src="index.js"></script>
     </head>
     <body>
-      <div id="terminal"></div>
+      <div class="terminal-box">
+        <div id="terminal"></div>
+      </div>
     </body>
   </html>
