Start and end game in black-on-white color theme

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <script src="index.js"></script>
     </head>
     <body>
-      <div class="terminal-box">
+      <div class="terminal-box theme-bow">
         <div id="terminal"></div>
       </div>
     </body>
