More content, fit addon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <link rel="stylesheet" href="css/styles.css" />
       <script src="js/lib/jquery.min.js"></script>
       <script src="js/lib/xterm.js"></script>
+      <script src="js/lib/xterm-addon-fit.js"></script>
       <script src="js/data.js"></script>
       <script src="index.js"></script>
     </head>
