--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
       <script src="js/lib/jquery.min.js"></script>
       <script src="js/lib/xterm.js"></script>
       <script src="js/lib/xterm-addon-fit.js"></script>
-      <script src="js/data.js"></script>
-      <script src="index.js"></script>
+      <script type="module" src="js/app.js"></script>
     </head>
     <body>
       <div class="terminal-box theme-bow">
