--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       <script src="js/lib/xterm-addon-fit.js"></script>
       <script type="module" src="js/app.js"></script>
     </head>
-    <body>
-      <div class="terminal-box theme-bow">
+    <body class="theme-bow">
+      <div class="terminal-box">
         <div id="terminal"></div>
       </div>
     </body>
