Try to improve keyboard input

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
   <html>
     <head>
+      <title>5D action adventure</title>
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <link rel="stylesheet" href="css/xterm.css" />
       <link rel="stylesheet" href="css/styles.css" />
