--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <title>Philogem: 5D action adventure</title>
       <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link rel="icon" type="image/x-icon" href="/images/favicon.png">
       <link rel="stylesheet" href="css/xterm.css" />
       <link rel="stylesheet" href="css/styles.css" />
       <script src="js/lib/jquery.min.js"></script>
